--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,6 +5,10 @@ on:
     tags:
       - 'v*.*.*'
 
+permissions:
+  contents: write
+  packages: write
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -75,20 +79,10 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Create GitHub Release
-        uses: actions/create-release@v1
+        run: |
+          gh release create v${{ steps.version.outputs.VERSION }} \
+            --title "Release v${{ steps.version.outputs.VERSION }}" \
+            --notes "Changes in v${{ steps.version.outputs.VERSION }}. Install with: npm install @wolffo/three-fire@${{ steps.version.outputs.VERSION }}" \
+            --latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ steps.version.outputs.VERSION }}
-          body: |
-            ## Changes in v${{ steps.version.outputs.VERSION }}
-
-            See [CHANGELOG.md](./CHANGELOG.md) for detailed changes.
-
-            ## Installation
-            ```bash
-            npm install @wolffo/three-fire@${{ steps.version.outputs.VERSION }}
-            ```
-          draft: false
-          prerelease: false
