--- a/examples/package.json
+++ b/examples/package.json
@@ -9,10 +9,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@react-three/drei": "^9.93.0",
+        "@react-three/fiber": "^8.15.12",
+        "@wolffo/three-fire": "^1.0.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "@react-three/fiber": "^8.15.12",
-        "@react-three/drei": "^9.93.0",
         "three": "^0.160.0"
     },
     "devDependencies": {
