--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "module": "dist/index.esm.js",
     "exports": {
         ".": {
+            "types": "./dist/index.d.ts",
             "import": "./dist/index.esm.js",
-            "require": "./dist/index.js",
-            "types": "./dist/index.d.ts"
+            "require": "./dist/index.js"
         }
     },
     "scripts": {
         "build": "rollup -c",
         "dev": "rollup -c -w",
         "typecheck": "tsc --noEmit",
-        "test": "node test/test-vanilla.js",
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "test:ui": "vitest --ui",
+        "test:coverage": "vitest run --coverage",
         "prepublishOnly": "npm run build",
         "release:patch": "npm version patch && git push origin master --tags",
         "release:minor": "npm version minor && git push origin master --tags",
@@ -38,9 +41,9 @@
     "author": "wolffo",
     "license": "MIT",
     "peerDependencies": {
-        "three": ">=0.150.0",
+        "@react-three/fiber": ">=8.0.0",
         "react": ">=18.0.0",
-        "@react-three/fiber": ">=8.0.0"
+        "three": ">=0.150.0"
     },
     "peerDependenciesMeta": {
         "react": {
@@ -51,16 +54,23 @@
         }
     },
     "devDependencies": {
+        "@react-three/fiber": "^8.15.12",
+        "@rollup/plugin-typescript": "^11.1.5",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.3.0",
         "@types/react": "^18.2.45",
         "@types/three": "^0.160.0",
-        "@react-three/fiber": "^8.15.12",
+        "@vitest/coverage-v8": "^3.2.4",
+        "@vitest/ui": "^3.2.4",
+        "happy-dom": "^18.0.1",
         "react": "^18.2.0",
-        "three": "^0.160.0",
-        "typescript": "^5.3.3",
+        "react-dom": "^18.3.1",
         "rollup": "^4.9.2",
-        "@rollup/plugin-typescript": "^11.1.5",
         "rollup-plugin-dts": "^6.1.0",
-        "tslib": "^2.6.2"
+        "three": "^0.160.0",
+        "tslib": "^2.6.2",
+        "typescript": "^5.3.3",
+        "vitest": "^3.2.4"
     },
     "files": [
         "dist",
