--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@wolffo/three-fire",
-    "version": "1.0.8-alpha.0",
+    "version": "1.1.0",
     "type": "module",
     "description": "Modern TypeScript volumetric fire effect for Three.js and React Three Fiber",
     "main": "dist/index.js",
