--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "@wolffo/three-fire",
     "version": "1.1.0",
     "type": "module",
-    "description": "Modern TypeScript volumetric fire effect for Three.js and React Three Fiber",
+    "description": "Modern TypeScript volumetric fire effect for Three.js and React Three Fiber with WebGPU support.",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "module": "dist/index.esm.js",
@@ -21,6 +21,21 @@
             "types": "./dist/react.d.ts",
             "import": "./dist/react.esm.js",
             "require": "./dist/react.js"
+        },
+        "./tsl": {
+            "types": "./dist/tsl/index.d.ts",
+            "import": "./dist/tsl/index.esm.js",
+            "require": "./dist/tsl/index.js"
+        },
+        "./tsl/vanilla": {
+            "types": "./dist/tsl/vanilla.d.ts",
+            "import": "./dist/tsl/vanilla.esm.js",
+            "require": "./dist/tsl/vanilla.js"
+        },
+        "./tsl/react": {
+            "types": "./dist/tsl/react.d.ts",
+            "import": "./dist/tsl/react.esm.js",
+            "require": "./dist/tsl/react.js"
         }
     },
     "scripts": {
@@ -54,7 +69,7 @@
     "peerDependencies": {
         "@react-three/fiber": ">=8.0.0",
         "react": ">=18.0.0",
-        "three": ">=0.150.0"
+        "three": ">=0.168.0"
     },
     "peerDependenciesMeta": {
         "react": {
@@ -70,7 +85,7 @@
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
         "@types/react": "^18.2.45",
-        "@types/three": "^0.160.0",
+        "@types/three": "^0.170.0",
         "@vitest/coverage-v8": "^3.2.4",
         "@vitest/ui": "^3.2.4",
         "happy-dom": "^18.0.1",
@@ -78,7 +93,7 @@
         "react-dom": "^18.3.1",
         "rollup": "^4.9.2",
         "rollup-plugin-dts": "^6.1.0",
-        "three": "^0.160.0",
+        "three": "^0.170.0",
         "tslib": "^2.6.2",
         "typescript": "^5.3.3",
         "vitest": "^3.2.4"
