--- a/examples/package.json
+++ b/examples/package.json
@@ -11,15 +11,15 @@
     "dependencies": {
         "@react-three/drei": "^9.93.0",
         "@react-three/fiber": "^8.15.12",
-        "@wolffo/three-fire": "1.0.7",
+        "@wolffo/three-fire": "file:..",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "three": "^0.160.0"
+        "three": "^0.170.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.45",
         "@types/react-dom": "^18.2.18",
-        "@types/three": "^0.160.0",
+        "@types/three": "^0.170.0",
         "@vitejs/plugin-react": "^4.2.1",
         "typescript": "^5.3.3",
         "vite": "^5.0.10"
